--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",  // Update this to point to your main server file
   "scripts": {
+    "start": "node server.js",  // Add this line to start your server
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -19,3 +20,4 @@
     "multer": "^1.4.5-lts.1"
   }
 }
+
