--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "server.js",  // Update this to point to your main server file
+  "main": "server.js",
   "scripts": {
-    "start": "node server.js",  // Add this line to start your server
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
