--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Jhefferson Castro Dos Santos",
   "license": "ISC",
   "description": "",
   "dependencies": {
@@ -17,7 +17,8 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "mongoose": "^8.5.1",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "simple-git": "^3.16.0",
+    "node-cron": "^3.0.0"
   }
 }
-
