--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^1.20.2",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
     "express": "^4.19.2",
     "mongoose": "^8.5.1",
     "multer": "^1.4.5-lts.1",
