--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "aws-sdk": "^2.1047.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "compression": "^1.7.4",
@@ -19,7 +20,6 @@
     "express": "^4.19.2",
     "mongoose": "^8.5.1",
     "multer": "^1.4.5-lts.1",
-    "simple-git": "^3.16.0",
     "node-cron": "^3.0.0"
   }
 }
