--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "backend",
   "version": "1.0.0",
@@ -20,6 +21,8 @@
     "express": "^4.19.2",
     "mongoose": "^8.5.1",
     "multer": "^1.4.5-lts.1",
-    "node-cron": "^3.0.0"
+    "node-cron": "^3.0.0",
+    "qrcode": "^1.5.0",
+    "canvas": "^2.11.0"
   }
 }
